src/test/resources/errors/wrong-anon-function-call.intp
val f = func(a) {
  val g = func(a, b) {
    return 1
  }
  return g
}
f(1)(2)